adds support for deleting a shipment as well as a CLI

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "harbor-client",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "JavaScript client library for Harbor.",
   "main": "index.js",
+  "bin": {
+    "harbor": "cli.js"
+  },
   "scripts": {
-    "tests": "mocha --timeout 10000"
+    "test": "mocha --timeout 10000"
   },
   "keywords": [],
   "author": "john.ritsema@turner.com",
   "license": "apache 2.0",
   "dependencies": {
     "browser-request": "^0.3.3",
+    "minimist": "^1.2.0",
     "request": "~2.27.0"
   },
   "devDependencies": {
