--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harbor-client",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "JavaScript client library for Harbor.",
   "main": "index.js",
   "bin": {
@@ -14,6 +14,7 @@
   "license": "apache 2.0",
   "dependencies": {
     "browser-request": "^0.3.3",
+    "js-yaml": "^3.6.1",
     "minimist": "^1.2.0",
     "request": "~2.27.0"
   },
